--- a/iiot/app_web/admin - 191002/css/manager-standard-style.css
+++ b/iiot/app_web/admin - 191002/css/manager-standard-style.css
@@ -72,15 +72,15 @@ h3.top_title{ text-align: center; padding: 20px 0 0; font-size: 16px; font-weigh
 .top_box p.go_menu a{ color: #333; }
 .top_box p.go_menu i{padding:0 8px;  color: #ff9900;}
 
-.mainbox .btn_swtich{ display: inline-block;}
-.mainbox .btn_swtich p{float: left; line-height: 24px; margin-right: 10px; color: #333; padding-left: 10px;}
-.mainbox .swtich_type{ float: left; height: 24px;}
-.mainbox .button {display: inline-block;position: relative; height: 22px;-webkit-user-select: none;-webkit-tap-highlight-color: rgba(0, 0, 0, 0);cursor: pointer;background-color: #eee; border-radius: 22px;}
-.mainbox .button:before {content: "";display: inline-block; width: 42px; height: 22px; background-color: #fff; border-radius: 22px; box-sizing: border-box; border: 2px solid #eee; transition: all 0.2s linear; }
-.mainbox .button:after {position: absolute; left: 2px; top: 2px; content: ""; display: inline-block; width: 18px; height: 18px; background-color: #fff; border-radius: 18px; transition: all 0.2s linear; box-shadow: 0px 1px 3px #bbb;}
-.mainbox .btn_swtich input {opacity: 0;position: absolute;top: 0;left: 0;}
-.mainbox .btn_swtich input:checked ~ .button:before {background-color:#ff9900;border: 1px solid #ff9900;}
-.mainbox .btn_swtich input:checked ~ .button:after {left: 22px;}
+.btn_swtich{ display: inline-block;}
+.btn_swtich p{float: left; line-height: 24px; margin-right: 10px; color: #333; padding-left: 10px;}
+.swtich_type{ float: left; height: 24px;}
+.button {display: inline-block;position: relative; height: 22px;-webkit-user-select: none;-webkit-tap-highlight-color: rgba(0, 0, 0, 0);cursor: pointer;background-color: #eee; border-radius: 22px;}
+.button:before {content: "";display: inline-block; width: 42px; height: 22px; background-color: #fff; border-radius: 22px; box-sizing: border-box; border: 2px solid #eee; transition: all 0.2s linear; }
+.button:after {position: absolute; left: 2px; top: 2px; content: ""; display: inline-block; width: 18px; height: 18px; background-color: #fff; border-radius: 18px; transition: all 0.2s linear; box-shadow: 0px 1px 3px #bbb;}
+.btn_swtich input {opacity: 0;position: absolute;top: 0;left: 0;}
+.btn_swtich input:checked ~ .button:before {background-color:#ff9900;border: 1px solid #ff9900;}
+.btn_swtich input:checked ~ .button:after {left: 22px;}
 
 .the_productbox{ width: 100%; height: calc(100vh - 46px); }
 .the_productbox .top_tool{ width: 100%; background-color: #efefef; padding:5px 10px 18px 10px;; }
