--- a/Richtek2/css/style.css
+++ b/Richtek2/css/style.css
@@ -23,7 +23,7 @@ select, input, textarea, button {  font-family:'Noto Sans TC',Arial,\5FAE\8EDF\6
 *:link, *:visited, *:hover, *:active, *:focus , * {border: none;outline: none; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box;}
 
 /*===== start ======*/
-.contentsBox{ width: 1400px; padding: 0 20px; margin: 0 auto; }
+.contentsBox{ padding: 0 20px; margin: 0 auto; }
 .img_default, .img_default::before, .img_default::after{ background-position: center center; background-repeat: no-repeat; background-size: contain;}
 
 .headerBox{ width: 100%; padding: 10px 0; background: rgb(7,43,97); background: -moz-linear-gradient(45deg, rgba(7,43,97,1) 0%, rgba(55,166,217,1) 100%); background: -webkit-linear-gradient(45deg, rgba(7,43,97,1) 0%,rgba(55,166,217,1) 100%); background: linear-gradient(45deg, rgba(7,43,97,1) 0%,rgba(55,166,217,1) 100%); filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#072b61', endColorstr='#37a6d9',GradientType=1 ); }
@@ -46,7 +46,7 @@ select, input, textarea, button {  font-family:'Noto Sans TC',Arial,\5FAE\8EDF\6
 .mainBox .leftMenu ul li.btn_in p a{ background-color: #009EB8; }
 
 .mainBox .rightContents{ width:100%; padding:0 0 40px 88px; }
-.mainBox .rightContents .main_banner{ width: 100%; height: 300px; background-size: cover; background-repeat: no-repeat; background-position: center center;display: -webkit-flex; display: flex; -webkit-align-items: center; align-items: center; -webkit-justify-content: center; justify-content: center;}
+.mainBox .rightContents .main_banner{ width: 100%; height: 250px; background-size: cover; background-repeat: no-repeat; background-position: center center;display: -webkit-flex; display: flex; -webkit-align-items: center; align-items: center; -webkit-justify-content: center; justify-content: center;}
 .mainBox .rightContents .main_banner .banner_info{ padding:20px 0; width: 80%; }
 .mainBox .rightContents .main_banner h1.main_title, .mainBox .rightContents .main_banner h2.sub_title{ font-weight: bold; color: #fff; text-shadow: 5px 3px 5px rgba(0,0,0,.5); }
 .mainBox .rightContents .main_banner h1.main_title{ font-size: 80px; }
@@ -66,9 +66,6 @@ select, input, textarea, button {  font-family:'Noto Sans TC',Arial,\5FAE\8EDF\6
 .mainBox .rightContents .banner_entertainment{ background-image: url(../images/inside_banner_entertainment.jpg); }
 .mainBox .rightContents .banner_hotel{ background-image: url(../images/inside_banner_hotel.jpg); }
 
-.mainBox .rightContents .main_banner h1.main_title, .mainBox .rightContents .main_banner h2.sub_title{ font-weight: bold; color: #fff; text-shadow: 5px 3px 5px rgba(0,0,0,.5); }
-.mainBox .rightContents .main_banner h1.main_title{ font-size: 58px; }
-.mainBox .rightContents .main_banner h2.sub_title{ font-size: 26px; }
 
 .mainBox .rightContents .news_box{ width: 80%; margin: 0 auto; padding: 40px 0; }
 .mainBox .rightContents .news_box h3.top_title{ width: 100%; font-size: 30px; font-weight: bold; color: #009EB8; padding: 10px 0; }
@@ -80,22 +77,31 @@ select, input, textarea, button {  font-family:'Noto Sans TC',Arial,\5FAE\8EDF\6
 .mainBox .rightContents .news_box ul.new_list li p.type{ float: left; width: 240px; color: #00467F;}
 .mainBox .rightContents .news_box ul.new_list li p.new_title{ float: left; width: calc(100% - 240px); display: block; display: -webkit-box; -webkit-box-orient: vertical; -webkit-line-clamp: 1; line-height: 40px; height: 40px * 1; overflow:hidden; }
 
-.mainBox .rightContents ul.other_link{ text-align: center; padding: 40px 0; }
+.mainBox .rightContents ul.other_link{ text-align: center; padding: 20px 0; }
 .mainBox .rightContents ul.other_link li{ display: inline-block; margin: 0 30px; vertical-align: middle; }
 .mainBox .rightContents ul.other_link li a{ display: block; }
 .mainBox .rightContents ul.other_link li a:hover{ opacity: .9; }
 
+.mainBox .insideContents .main_banner h1.main_title{ font-size: 58px; }
+.mainBox .insideContents .main_banner h2.sub_title{ font-size: 24px; }
+
 .mainBox .insideContents ul.store_list{ width: 100%; padding:50px 30px; max-width: 1142px; margin: 0 auto; }
 .mainBox .insideContents ul.store_list li{ float: left; padding:25px 20px; }
 .mainBox .insideContents ul.store_list li .store_content{ width: 320px; border-radius: 6px; box-shadow: 0 0 5px 5px rgba(0,0,0,.1); padding: 20px;}
-.mainBox .insideContents ul.store_list li .store_photo{ width: 100%; display: block; }
-.mainBox .insideContents ul.store_list li .store_photo img{ width: 100%; }
+.mainBox .insideContents ul.store_list li .store_photo{ width: 280px; height: 193px; background-color: #efefef; display: -webkit-flex; display: flex; -webkit-align-items: center; align-items: center; -webkit-justify-content: center; justify-content: center;}
+.mainBox .insideContents ul.store_list li .store_photo img{ max-width: 100%; max-height: 100%; }
+.mainBox .insideContents ul.store_list li a.store_photo:hover{ opacity: .8; }
 .mainBox .insideContents ul.store_list li h3.store_name{ color: #37A6D9; font-size: 20px; padding: 8px 0; font-weight: bold; border-bottom: 1px solid #c3c3c3; margin-bottom: 10px; }
-.mainBox .insideContents ul.store_list li .store_info{ width: 100%; height: 400px; overflow-y: auto; }
+.mainBox .insideContents ul.store_list li .store_info{ width: 100%; height: 300px; overflow-y: auto; }
 .mainBox .insideContents ul.store_list li .store_info p{ font-size: 14px; line-height: 24px; }
 .mainBox .insideContents ul.store_list li .store_info p span{ color: #37A6D9; font-weight: bold; }
+.mainBox .insideContents ul.store_list li .store_info p.btn{ font-size: 13.5px; margin-top: 8px;}
+.mainBox .insideContents ul.store_list li .store_info p.btn a{ color: #333; border: 1px solid #37A6D9; height: 24px; padding: 0 10px 0 20px; border-radius: 4px; display: inline-block; position: relative;}
+.mainBox .insideContents ul.store_list li .store_info p.btn a:hover{ background-color: #37A6D9; color: #fff; }
+.mainBox .insideContents ul.store_list li .store_info p.btn a::after{ content: ""; position: absolute; left: 7px; top: 6px; width: 0; height: 0; border-style: solid; border-width: 5px 0 5px 8px;border-color: transparent transparent transparent #37a6d9;line-height: 0px;_border-color: #000000 #000000 #000000 #37a6d9;_filter: progid:DXImageTransform.Microsoft.Chroma(color='#000000');}
+.mainBox .insideContents ul.store_list li .store_info p.btn a:hover::after{border-color: transparent transparent transparent #fff;_border-color: #000000 #000000 #000000 #fff;}
 
-.mainBox .insideContents ul.bottom_pages{ width: 80%; margin: 0 auto; text-align: center; border-bottom: 1px solid #D8D8D8; padding: 20px 0;}
+.mainBox .insideContents ul.bottom_pages{ width: 80%; margin: 0 auto; text-align: center; border-bottom: 1px solid #37A6D9; padding: 20px 0;}
 .mainBox .insideContents ul.bottom_pages li{ display: inline-block; }
 .mainBox .insideContents ul.bottom_pages li p{ font-size: 16px;}
 .mainBox .insideContents ul.bottom_pages li p a{ color: #A8A8A8; padding: 3px 10px; position: relative; display: block;}
@@ -106,7 +112,6 @@ select, input, textarea, button {  font-family:'Noto Sans TC',Arial,\5FAE\8EDF\6
 .mainBox .insideContents ul.bottom_pages li:last-child p a::after,
 .mainBox .insideContents ul.bottom_pages li:nth-child(2) p a::after{ display: none; }
 
-.mainBox .insideContents .main_banner h2.sub_title{ font-size: 22px; }
 
 .footerBox{ width: 100%; background-color: #072B61; padding: 20px 0; position: relative; }
 .footerBox .contentsBox{ width: 100%;padding-right: 120px; }
